--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-pandas 
+pandas
 numpy
 seaborn
-scikit-learn
-dill
+matplotlib
+scikit-learn==1.0.2
 catboost
 xgboost
--e .
+Flask
+dill 
+
+#-e .
